--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ChangePasswordActivity">
+    tools:context=".activity.AddAddressActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Change Password"
+            android:text="Add Address"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -38,103 +38,122 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <!-- Old Password Input -->
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Provinsi"
+            android:textSize="20sp"
+            android:textColor="@color/text_secondary"
+            android:layout_marginTop="20dp"/>
+
+        <Spinner
+            android:id="@+id/spinProvinsi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:scrollbarSize="48dp"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Kota"
+            android:textSize="20sp"
+            android:textColor="@color/text_secondary"
+            android:layout_marginTop="20dp"/>
+
+        <Spinner
+            android:id="@+id/spinKota"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:scrollbarSize="48dp"/>
+
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/oldPasswordContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Old Password"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="20dp"
+            android:hint="Receiver Name"
             app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/primary_dark"
             app:boxStrokeWidth="2dp"
-            app:startIconDrawable="@drawable/ic_lock"
-            app:endIconMode="password_toggle"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiOldPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- Password Input -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordContainer"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="New Password"
-            app:hintTextColor="@color/black"
-            app:boxStrokeColor="@color/primary_dark"
-            app:boxStrokeWidth="2dp"
-            android:layout_marginTop="16dp"
-            app:startIconDrawable="@drawable/ic_lock"
-            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/ic_user"
+            app:endIconMode="clear_text"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
             app:boxCornerRadiusBottomStart="12dp"
             app:boxCornerRadiusBottomEnd="12dp"
-            app:layout_constraintHorizontal_bias="0.5">
+            app:counterEnabled="true"
+            app:counterMaxLength="50">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiPassword"
+                android:id="@+id/tiName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="text"
+                android:maxLength="50"
+                tools:ignore="TouchTargetSizeCheck" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- Confirm Password Input -->
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/confirmPasswordContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="Confirm Password"
+            android:layout_marginTop="20dp"
+            android:hint="Address"
             app:hintTextColor="@color/black"
             app:boxStrokeColor="@color/primary_dark"
             app:boxStrokeWidth="2dp"
-            app:startIconDrawable="@drawable/ic_lock"
-            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/ic_location"
+            app:endIconMode="clear_text"
             app:boxCornerRadiusTopStart="12dp"
             app:boxCornerRadiusTopEnd="12dp"
             app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusBottomEnd="12dp">
+            app:boxCornerRadiusBottomEnd="12dp"
+            app:counterEnabled="true"
+            app:counterMaxLength="255">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiConfirmPassword"
+                android:id="@+id/tiAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="textMultiLine"
+                android:maxLength="255"
+                android:minLines="3"
+                android:gravity="top|start"
+                android:scrollbars="vertical"
+                android:overScrollMode="always"
+                tools:ignore="TouchTargetSizeCheck" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- Submit Button -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/primary"
-            android:text="Submit"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:cornerRadius="12dp"/>
 
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSubmit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/primary"
+        android:text="Add Address"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        app:cornerRadius="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
