--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.EditProfile">
+    tools:context=".activity.EditProfileAvticity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
